--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@mdi/font": "^5.7.55",
+    "@nuxtjs/axios": "^5.12.2",
+    "bulma-carousel": "^4.0.4",
     "core-js": "^3.6.5",
     "node-sass": "^4.14.1",
     "nuxt": "^2.14.5",
